--- a/backend/env.example
+++ b/backend/env.example
@@ -10,3 +10,10 @@ GEMINI_ENDPOINT=https://generativelanguage.googleapis.com/v1beta/models
 
 # CORS for local frontend dev
 CORS_ORIGINS=http://localhost:5173
+
+# Auth (JWT)
+# NOTE: Please set a strong random value in backend/.env (recommended)
+AUTH_SECRET_KEY=
+AUTH_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
