--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ SQLAlchemy==2.0.36
 pydantic==2.10.4
 pydantic-settings==2.7.0
 httpx==0.27.2
+python-jose==3.4.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.1
